--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-.poppins{
+.poppins {
   font-family: "Poppins", sans-serif;
   font-style: normal;
 }
@@ -13,7 +13,7 @@
   font-weight: 500;
 }
 
-*{
+* {
   /* outline: 1px dashed blue; */
 
   margin: 0;
@@ -23,28 +23,12 @@
   font-family: "poppins", "sans-serif";
 }
 
-a{
+a {
   text-decoration: none;
   color: black;
-
 }
 
-a:hover{
+a:hover {
   color: black;
-   transform: translateY(-200px) !important;
-}
-
-button{
-  display: inline-block;
-  outline: 0;
-  border: 0;
-  cursor: pointer;
-  background: #000000;
-  color: #FFFFFF;
-  border-radius: 8px;
-  padding: 14px 24px 16px;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 1;
-  transition: transform 200ms,background 200ms;
+  transform: translateY(-200px) !important;
 }
