--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,13 +1,11 @@
 header {
-  margin: 10px;
-  padding: 0px 150px;
+  padding: 3rem 9rem;
 
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-
-  outline: 2px solid pink;
+  height: 5rem;
 }
 
 header a .logo_img {
@@ -22,13 +20,13 @@ header .logo_img_wrapper {
 
 header .nav_links {
   font-size: 18px;
-  margin: 0 20px;
   font-weight: 500;
-  color: rgb(77, 77, 77);
+  margin: 0 20px;
+  color: rgb(148, 148, 148);
 }
 
 header .nav_links:hover {
-  color: rgb(29, 29, 29);
+  color: rgb(233, 233, 233);
 }
 
 header .resume_button {
