added logo animation

--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -10,6 +10,8 @@ header {
 
 header a .logo_img {
   width: 200px;
+  animation: flicker 2s infinite;
+  filter: drop-shadow(0 0 10px #00ffff);
 }
 
 header .logo_img_wrapper {
@@ -48,4 +50,17 @@ header .resume_button:hover {
   box-shadow:
     0 0 0 0 #fff,
     0 0 0 3px #1de9b6;
+}
+
+
+
+@keyframes flicker {
+  0%, 18%, 22%, 25%, 53%, 57%, 100% {
+    opacity: 1;
+    filter: brightness(1);
+  }
+  20%, 24%, 55% {
+    opacity: 0.3;
+    filter: brightness(1.4);
+  }
 }
